<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEditorFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/edit_fragment_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_editor_layout_title"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/edit_fragment_title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_editor_title"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/edit_fragment_title_editText"
        app:layout_constraintEnd_toStartOf="@+id/edit_fragment_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_fragment_title_editText" />

    <EditText
        android:id="@+id/edit_fragment_title_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_fragment_title_textView"
        app:layout_constraintTop_toBottomOf="@+id/edit_fragment_fragment_title" />

    <TextView
        android:id="@+id/edit_fragment_description_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_editor_description"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/edit_fragment_description_editText"
        app:layout_constraintEnd_toStartOf="@+id/edit_fragment_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_fragment_description_editText" />

    <EditText
        android:id="@+id/edit_fragment_description_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_fragment_fragment_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_fragment_title_editText" />

    <TextView
        android:id="@+id/edit_fragment_icon_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_editor_icon"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/edit_fragment_icon_button"
        app:layout_constraintEnd_toStartOf="@+id/edit_fragment_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_fragment_icon_button" />

    <ImageView
        android:id="@+id/edit_fragment_icon_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_fragment_icon_button"
        app:layout_constraintStart_toEndOf="@+id/edit_fragment_icon_textView"
        app:layout_constraintTop_toTopOf="@+id/edit_fragment_icon_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_fragment_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_editor_icon_button"
        app:icon="@drawable/ic_baseline_edit_24"
        app:iconGravity="start"
        app:layout_constraintStart_toEndOf="@+id/edit_fragment_icon_imageView"
        app:layout_constraintTop_toBottomOf="@+id/edit_fragment_description_editText" />

    <TextView
        android:id="@+id/edit_fragment_color_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_editor_color"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/edit_fragment_color_button"
        app:layout_constraintEnd_toStartOf="@+id/edit_fragment_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_fragment_color_button" />

    <ImageView
        android:id="@+id/edit_fragment_color_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_fragment_color_button"
        app:layout_constraintStart_toEndOf="@+id/edit_fragment_color_textView"
        app:layout_constraintTop_toTopOf="@+id/edit_fragment_color_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_fragment_color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_editor_color_button"
        app:icon="@drawable/ic_baseline_edit_24"
        app:iconGravity="start"
        app:layout_constraintStart_toEndOf="@+id/edit_fragment_color_imageView"
        app:layout_constraintTop_toBottomOf="@+id/edit_fragment_icon_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_fragment_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_editor_save"
        app:icon="@drawable/ic_baseline_save_24"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_fragment_color_button" />

</androidx.constraintlayout.widget.ConstraintLayout>